[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.134"
serde = "1.0.217"
axum = {version = "0.8.1", features = ["macros"]}
hyper = "1.5.2"
tokio = {version = "1.42.0", features = ["full"]}
sqlx = {version = "0.8.3", features = ["runtime-tokio", "postgres"]}
dotenv = "0.15.0"
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
uuid = {version = "1.11.0", features = ["v4"]}
axum-extra = {version ="0.10.0", features = ["cookie"]}
time = "0.3.37"
tower-http = {version = "0.6.2", features = ["cors","trace"]}